# confluo

./: .dockerignore  .gitignore  404.html  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  build.sh  cleanup.sh  index.html  install.sh  package.sh  paper.txt  sitemap.xml
app/: CMakeLists.txt
app/chainrep/: CMakeLists.txt
app/graphstore/: CMakeLists.txt
app/logstore/: CMakeLists.txt
app/streaming/: CMakeLists.txt
app/timeseries/: CMakeLists.txt
bench/: CMakeLists.txt
bench/include/: cpu_utilization.h  filter_benchmark.h  log_store_benchmark.h  micro_benchmark.h  packet_loader.h  profiler.h  storage_footprint.h
bench/src/: filter_benchmark.cc  log_store_benchmark.cc  micro_benchmark.cc  packet_loader.cc  storage_footprint.cc
core/: CMakeLists.txt
core/include/: conc_vectors.h  entrylist.h  exceptions.h  faclog.h  filterops.h  flags.h  handle.h  hash_ops.h  indexlog.h  kvmap.h  linked_list.h  lock_free_ngram_idx.h  locks.h  log_store.h  logging.h  logstore.h  memory_map.h  monolog.h  ngram_idx.h  offset_list.h  offsetlog.h  streamlog.h  task_manager.h  tieredindex.h  tokens.h  utils.h  value_offsets.h
core/src/: log_store.cc
examples/libstreaming/: CMakeLists.txt
examples/libtimeseries/: CMakeLists.txt  timeseries_db.h
javaclient/: CMakeLists.txt  build.xml  build.xml.in  ja.txt  java.txt  maven-build.properties  maven-build.xml  pom.xml
libconfluo/: CMakeLists.txt
libconfluo/confluo/: aggregate.h  aggregate_info.h  aggregate_types.h  aggregated_reflog.h  alert.h  alert_index.h  allocator.h  archival_utils.h  atomic.h  atomic_multilog.h  atomic_multilog_metadata.h  bitmap.h  bitmap_array.h  column.h  configuration_params.h  confluo_store.h  data_log.h  defaults.h  encoder.h  exceptions.h  field.h  filter.h  filter_archiver.h  filter_log.h  index_log.h  index_state.h  memory_stat.h  monolog.h  monolog_exp2.h  monolog_exp2_linear.h  monolog_linear.h  monolog_linear_archiver.h  monolog_linear_block.h  periodic_task.h  ptr.h  ptr_metadata.h  radix_tree.h  read_tail.h  record.h  record_offset_range.h  (+9 more)
libconfluo/src/: aggregated_reflog.cc  alert.cc  alert_index.cc  atomic_multilog.cc  atomic_multilog_metadata.cc  confluo_store.cc  filter.cc  read_tail.cc  trigger.cc
libconfluo/test/: aggregate_test.h  aggregated_reflog_test.h  atomic_multilog_metadata_test.h  atomic_multilog_test.h  bitmap_array_test.h  bitmap_test.h  byte_string_test.h  column_test.h  confluo_store_test.h  data_types_test.h  delta_encoded_array_test.h  expression_compiler_test.h  filter_archival_test.h  filter_test.h  flatten_test.h  immutable_value_test.h  index_state_test.h  ip_address.h  memory_stat_test.h  monolog_linear_archival_test.h  monolog_test.h  mutable_value_test.h  periodic_task_test.h  ptr_test.h  radix_tree_test.h  record_batch_test.h  schema_parser_test.h  schema_test.h  size_type.h  sketch_experiment.cc  storage_allocator_test.h  stream_test.h  string_map_test.h  table_metadata_test.h  task_test.h  test_main.cc  test_utils.h  thread_manager_test.h  tiered_index_test.h  trigger_compiler_test.h  (+2 more)
libdialog/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
libdialog/dialog/: aggregate.h  aggregate_ops.h  aggregate_types.h  aggregated_reflog.h  aggregates.h  alert.h  alert_index.h  alert_log.h  arithmetic_ops.h  attributes.h  auxlog.h  bitmap.h  bitmap_array.h  byte_string.h  column.h  column_snapshot.h  compiled_expression.h  compiled_minterm.h  compiled_predicate.h  concurrency_control.h  configuration_params.h  constants.h  data.h  data_iterator.h  data_log.h  data_log_constants.h  data_log_pool.h  data_point.h  data_types.h  delta_encoded_array.h  dialog_allocator.h  dialog_store.h  dialog_table.h  encoded_ptr.h  encoder.h  exceptions.h  expression.h  expression_compiler.h  field.h  filter.h  (+61 more)
libdialog/perf/: concurrency_control_perf.cc  dialog_server_perf.cc  log_store_server_perf.cc
libdialog/test/: aggregate_test.h  aggregated_reflog_test.h  append_only_dialog_store_test.cc  append_only_log_store_test.cc  bitmap_array_test.h  bitmap_test.h  byte_string_test.h  column_test.h  compiled_expression_test.h  compiled_minterm_test.h  compiled_predicate_test.h  data_types_test.h  delta_encoded_array_test.h  dialog_store_test.cc  dialog_store_test.h  dialog_table_test.h  expression_compiler_test.h  expression_parser_test.h  expression_test.h  expressions_test.h  filter_test.cc  filter_test.h  flatten_test.h  immutable_value_test.h  index_state_test.h  ip_address.h  lazy_stream_test.h  log_store_test.cc  mem_allocator_test.h  memory_stat_test.h  mempool_stat_test.h  mempool_test.h  minterm_test.h  monolog_test.h  mutable_value_test.h  numeric_test.h  periodic_task_test.h  ptr_test.h  radix_tree_test.h  record_batch_test.h  (+18 more)
libdialog/thrift/: dialog.thrift  log_store.thrift  thrift-gen.sh
libds/: CMakeLists.txt
libds/datastore/: cmd_parse.h  concurrency_control.h  coordinator.h  log_store.h  log_stream.h  logger.h  object.h  tail_scheme.h  tiered_index.h
libds/perf/: concurrency_control_perf.cc  log_store_server_perf.cc  tail_scheme_perf.cc
libds/test/: append_only_log_store_test.cc  coordinator_test.cc  log_store_test.cc  stream_test.cc  tiered_index_test.cc
libds/thrift/: coordinator.thrift  log_store.thrift  thriftgen.sh
libmonolog/: CMakeLists.txt
libmonolog/monolog/: exceptions.h  filterops.h  filterresult.h  logstore.h  mmap_monolog.h  monolog.h  offsetlog.h  tokens.h  utils.h
libmonolog/perf/: CMakeLists.txt  monolog_perf.cc  perf_main.cc
libmonolog/test/: CMakeLists.txt  monolog_test.cc
librpc/: CMakeLists.txt
librpc/rpc/: dialog_client.h  dialog_constants.h  dialog_server.h  dialog_service.h  dialog_service.tcc  dialog_types.h  dialog_types.tcc  rpc_alert_stream.h  rpc_client.h  rpc_configuration_params.h  rpc_constants.h  rpc_defaults.h  (+14 more)
libutils/: CMakeLists.txt
mica/: CMakeLists.txt
netplay/: CMakeLists.txt
pyclient/: CMakeLists.txt  dialog-shell  preamble.py  setup.cfg  setup.py  setup.py.in
server/: CMakeLists.txt
shell/: CMakeLists.txt
test/: CMakeLists.txt
(+2763 files in other folders)
